--- a/charts/checkmk/questions.yaml
+++ b/charts/checkmk/questions.yaml
@@ -31,7 +31,7 @@ questions:
   required: true
   description: "Check_MK automation secret"
   type: password
-  label: Password
+  label: Automation Secret
   group: "Check_MK Configuration"
 - variable: servicenow.url
   default: "https://mymid.url"
