--- a/charts/checkmk/values.yaml
+++ b/charts/checkmk/values.yaml
@@ -21,6 +21,7 @@ servicenow:
 checkmkconf:
   password: "test123"
   automationsecret: "test123"
+  hostport: 8080
 
 persistence:
   enabled: false
