--- a/charts/checkmk/templates/deployment.yaml
+++ b/charts/checkmk/templates/deployment.yaml
@@ -31,6 +31,11 @@ spec:
           volumeMounts:
           - mountPath: /omd/sites
             name: work-vol
+          ports:
+         - name: http
+           containerPort: 5000
+           hostPort: {{ default 8080 .Values.checkmkconf.hostport }}
+           protocol: TCP
           env:
           - name: CMK_PASSWORD
             valueFrom:
