--- a/charts/checkmk/values.yaml
+++ b/charts/checkmk/values.yaml
@@ -13,7 +13,7 @@ nameOverride: ""
 fullnameOverride: ""
 
 servicenow:
-  url: "https://mymid.url"
+  url: "http://{MID_Server_IP}:{MID_Web_Server_Port}/api/mid/em/jsonv2"
   name: "myname"
   username: "myusername"
   password: "mypass"
