--- a/charts/checkmk/Chart.yaml
+++ b/charts/checkmk/Chart.yaml
@@ -3,3 +3,4 @@ appVersion: "1.0"
 description: A Helm chart for Kubernetes
 name: checkmk
 version: 0.1.1
+icon: https://mathias-kettner.com/images/apple-touch-icon.png
