--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "checkmk.fullname" . }}
+  annotations:
+    field.cattle.io/targetWorkloadIds: '["deployment:'{{ include "checkmk.name" . }}':'{{ .Release.Name }}'"]'
   labels:
     app.kubernetes.io/name: {{ include "checkmk.name" . }}
     helm.sh/chart: {{ include "checkmk.chart" . }}
@@ -16,4 +18,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    workload.user.cattle.io/workloadselector: {{ template "fullname" . }}
+    workloadID_eventsystem: "true"
