--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ include "checkmk.fullname" . }}
   annotations:
-    field.cattle.io/targetWorkloadIds: '["deployment:'{{ include "checkmk.name" . }}':'{{ .Release.Name }}'"]'
+    field.cattle.io/targetWorkloadIds: '["deployment:{{ include "checkmk.name" . }}:{{ .Release.Name }}"]'
   labels:
     app.kubernetes.io/name: {{ include "checkmk.name" . }}
     helm.sh/chart: {{ include "checkmk.chart" . }}
