service template changes

--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -4,7 +4,11 @@ metadata:
   name: {{ include "checkmk.fullname" . }}
   annotations:
     field.cattle.io/targetWorkloadIds: '["deployment:{{ include "checkmk.name" . }}:{{ .Release.Name }}"]'
-  labels: {{ include "checkmk.labels.standard" . | indent 4 }}
+  labels:
+    app.kubernetes.io/name: {{ include "mid-server.name" . }}
+    helm.sh/chart: {{ include "mid-server.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   clusterIP: None
