--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -5,7 +5,10 @@ metadata:
   annotations:
     field.cattle.io/targetWorkloadIds: '["deployment:{{ include "checkmk.name" . }}:{{ .Release.Name }}"]'
   labels:
-    {{ include "checkmk.labels.standard" . | indent 4 }}
+    app.kubernetes.io/name: {{ include "checkmk.name" . }}
+    helm.sh/chart: {{ include "checkmk.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
 spec:
   type: {{ .Values.service.type }}
   clusterIP: None
