--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     field.cattle.io/targetWorkloadIds: '["deployment:{{ include "checkmk.name" . }}:{{ .Release.Name }}"]'
   labels:
-{{ include "mid-server.labels.standard" . | indent 4 }}
+{{ include "checkmk.labels.standard" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   clusterIP: None
