--- a/charts/checkmk/questions.yaml
+++ b/charts/checkmk/questions.yaml
@@ -67,7 +67,7 @@ questions:
   description: "Check_MK reverse proxy basic auth username"
   type: string
   label: Username
-  group: "Servicenow Configuration"
+  group: "Nginx Configuration"
 - variable: "Nginx Configuration"
   default: "bar"
   required: true
