--- a/charts/checkmk/questions.yaml
+++ b/charts/checkmk/questions.yaml
@@ -33,13 +33,13 @@ questions:
   type: password
   label: Automation Secret
   group: "Check_MK Configuration"
-- variable: checkmkconf.hostport
-  default: 8080
-  required: true
-  description: "Port to expose Check_MK"
-  type: string
-  label: Port
-  group: "Check_MK Configuration"
+#- variable: checkmkconf.hostport
+#  default: 8080
+#  required: true
+#  description: "Port to expose Check_MK"
+#  type: string
+#  label: Port
+#  group: "Check_MK Configuration"
 - variable: servicenow.url
   default: "http://{MID_Server_IP}:{MID_Web_Server_Port}/api/mid/em/jsonv2"
   required: true
