fix in servicediscovery

--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -15,4 +15,4 @@ spec:
       protocol: TCP
       name: default
   selector:
-    workloadID_eventsystem: "true"
+    #workloadID_eventsystem: "true"
