Fix in services

--- a/charts/checkmk/templates/service.yaml
+++ b/charts/checkmk/templates/service.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "checkmk.fullname" . }}
-  annotations:
-    #field.cattle.io/targetWorkloadIds: '["deployment:{{ include "checkmk.name" . }}:{{ include "checkmk.fullname" . }}"]'
+  annotations: {}
   labels:
 {{ include "checkmk.labels.standard" . | indent 4 }}
 spec:
@@ -17,4 +16,3 @@ spec:
   selector:
     app.kubernetes.io/name: {{ include "checkmk.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    #workloadID_eventsystem: "true"
