--- a/charts/checkmk/templates/deployment.yaml
+++ b/charts/checkmk/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
           volumeMounts:
           - mountPath: /omd/sites
             name: work-vol2
-          {{- if .Values.checkmkconf.exposed.enabled -}}
+          {{- if .Values.checkmkconf.exposed -}}
           ports:
             - name: http
               containerPort: 5000
