--- a/charts/checkmk/questions.yaml
+++ b/charts/checkmk/questions.yaml
@@ -34,21 +34,21 @@ questions:
   label: Automation Secret
   group: "Check_MK Configuration"
 - variable: servicenow.url
-  default: "http://{MID_Server_IP}:{MID_Web_Server_Port}/api/mid/em/jsonv2"
+  default: "http://midip:midport/api/mid/em/jsonv2"
   required: true
   description: "Servicenow MID URL"
   type: string
   label: URL
   group: "Servicenow Configuration"
 - variable: servicenow.username
-  default: ""
+  default: "foo"
   required: true
   description: "Servicenow API username"
   type: string
   label: Username
   group: "Servicenow Configuration"
 - variable: servicenow.password
-  default: ""
+  default: "bar"
   required: true
   description: "Servicenow API password"
   type: password
