--- a/charts/checkmk/Chart.yaml
+++ b/charts/checkmk/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 appVersion: "1.0"
-description: A Helm chart for Kubernetes
-name: checkmk-hostport
+description: A Helm chart for Check_MK with selection to expose a hostport
+name: checkmk
 version: 0.1.0
 icon: https://mathias-kettner.com/images/apple-touch-icon.png
