specify persistence folder name

--- a/charts/checkmk/questions.yaml
+++ b/charts/checkmk/questions.yaml
@@ -6,7 +6,7 @@ questions:
   label: Persistence enabled
   type: boolean
   default: false
-  group: "Persistence"
+  group: "Persistence /var"
   show_subquestion_if: true
   subquestions:
     - variable: persistence.storageClass
