--- a/charts/checkmk/templates/ingress.yaml
+++ b/charts/checkmk/templates/ingress.yaml
@@ -6,10 +6,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app.kubernetes.io/name: {{ include "checkmk.name" . }}
-    helm.sh/chart: {{ include "checkmk.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+{{ include "checkmk.labels.standard" . | indent 4 }}
 {{- with .Values.ingress.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
