--- a/charts/checkmk/templates/deployment.yaml
+++ b/charts/checkmk/templates/deployment.yaml
@@ -20,14 +20,14 @@ spec:
       - name: {{ .Values.image.pullSecret }}
       initContainers:
         - command:
-          - /docker-entrypoint.sh
+          - /docker-entrypoint-init.sh
           env:
           - name: CMK_PASSWORD
             valueFrom:
               secretKeyRef:
                 name: {{ include "checkmk.fullname" . }}
                 key: checkmk-password
-          image: "{{ .Values.initImage.repository }}:{{ .Values.initImage.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: Always
           name: checkmk-init
           volumeMounts:
